Working display and some mouvement

--- a/src/main/resources/dev/pa1007/scene.fxml
+++ b/src/main/resources/dev/pa1007/scene.fxml
@@ -18,10 +18,10 @@
     </rowConstraints>
     <GridPane fx:id="gameG" hgap="2.0" prefWidth="600.0" vgap="2.0" GridPane.rowIndex="1">
         <columnConstraints>
-            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints percentWidth="50" hgrow="ALWAYS"/>
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS"/>
+            <RowConstraints percentHeight="50" vgrow="ALWAYS"/>
         </rowConstraints>
     </GridPane>
     <BorderPane prefHeight="200.0" prefWidth="200.0">
