--- a/src/main/resources/dev/pa1007/scene.fxml
+++ b/src/main/resources/dev/pa1007/scene.fxml
@@ -98,7 +98,11 @@
                             <KeyCodeCombination alt="UP" code="H" control="UP" meta="UP" shift="UP" shortcut="UP"/>
                         </accelerator>
                     </MenuItem>
-                    <MenuItem mnemonicParsing="false" onAction="#aboutHandler" text="About"/>
+                    <MenuItem mnemonicParsing="false" onAction="#aboutHandler" text="About">
+                        <accelerator>
+                            <KeyCodeCombination alt="UP" code="A" control="UP" meta="UP" shift="UP" shortcut="UP"/>
+                        </accelerator>
+                    </MenuItem>
                 </Menu>
             </MenuBar>
         </top>
