--- a/src/main/resources/dev/pa1007/home.fxml
+++ b/src/main/resources/dev/pa1007/home.fxml
@@ -12,11 +12,16 @@
         <menus>
           <Menu mnemonicParsing="false" text="Game">
             <items>
-                <MenuItem mnemonicParsing="false" text="New game" onAction="#menuNewGameHandler"/>
-                <MenuItem mnemonicParsing="false" text="Load game" onAction="#loadGameHandler"/>
-                <MenuItem mnemonicParsing="false" text="Quit" onAction="#quitHandler"/>
+                <MenuItem mnemonicParsing="false" onAction="#menuNewGameHandler" text="New game" />
+                <MenuItem mnemonicParsing="false" onAction="#loadGameHandler" text="Load game" />
+                <MenuItem mnemonicParsing="false" onAction="#quitHandler" text="Quit" />
             </items>
           </Menu>
+            <Menu mnemonicParsing="false" text="Leaderboard">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Show" />
+              </items>
+            </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
               <MenuItem mnemonicParsing="false" text="About" />
@@ -37,14 +42,15 @@
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <Label layoutX="305.0" layoutY="118.0" text="(Si vide, une image par défaut sera attribué)" />
-      <Button fx:id="chooseImage" layoutX="187.0" layoutY="114.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" text="Select an image" onAction="#chooseImageHandler"/>
-      <Button fx:id="close" layoutX="46.0" layoutY="346.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="138.0" text="Close" onAction="#quitHandler"/>
+      <Label layoutX="305.0" layoutY="118.0" text="(If empty, a default image will be assigned)" />
+      <Button fx:id="chooseImage" layoutX="187.0" layoutY="114.0" mnemonicParsing="false" onAction="#chooseImageHandler" prefHeight="25.0" prefWidth="105.0" text="Select an image" />
+      <Button fx:id="close" layoutX="46.0" layoutY="346.0" mnemonicParsing="false" onAction="#quitHandler" prefHeight="25.0" prefWidth="138.0" text="Close" />
       <ImageView fitHeight="119.0" fitWidth="127.0" layoutX="467.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/taquin.png" />
          </image>
       </ImageView>
-      <CheckBox fx:id="withGUI" layoutX="46.0" layoutY="154.0" mnemonicParsing="false" text="Jouer sans interface graphique" />
+      <CheckBox fx:id="withGUI" layoutX="46.0" layoutY="154.0" mnemonicParsing="false" text="Play with console only" />
+      <CheckBox fx:id="withImage" layoutX="46.0" layoutY="183.0" mnemonicParsing="false" text="Play with number only" />
    </children>
 </AnchorPane>
