--- a/src/main/resources/dev/pa1007/home.fxml
+++ b/src/main/resources/dev/pa1007/home.fxml
@@ -52,5 +52,14 @@
       </ImageView>
       <CheckBox fx:id="withGUI" layoutX="46.0" layoutY="154.0" mnemonicParsing="false" text="Play with console only" />
       <CheckBox fx:id="withImage" layoutX="46.0" layoutY="183.0" mnemonicParsing="false" text="Play with number only" />
+      <Label layoutX="46.0" layoutY="211.0" prefHeight="17.0" prefWidth="139.0" text="Choose a theme :">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Label>
+      <RadioButton fx:id="radioButtonDarkTheme" layoutX="46.0" layoutY="260.0" mnemonicParsing="false" text="Dark theme" />
+      <RadioButton fx:id="radioButtonBlueTheme" layoutX="46.0" layoutY="286.0" mnemonicParsing="false" text="Blue theme" />
+      <RadioButton fx:id="radioButtonYellowTheme" layoutX="46.0" layoutY="311.0" mnemonicParsing="false" text="Yellow theme" />
+      <RadioButton fx:id="radioButtonWhiteTheme" layoutX="46.0" layoutY="236.0" mnemonicParsing="false" text="White theme" />
    </children>
 </AnchorPane>
