Creation of radio button in the home page + addition of theme in the menu

--- a/src/main/resources/dev/pa1007/home.fxml
+++ b/src/main/resources/dev/pa1007/home.fxml
@@ -50,8 +50,9 @@
             <Image url="@images/taquin.png" />
          </image>
       </ImageView>
-      <CheckBox fx:id="withGUI" layoutX="46.0" layoutY="154.0" mnemonicParsing="false" text="Play with console only" />
-      <CheckBox fx:id="withImage" layoutX="46.0" layoutY="183.0" mnemonicParsing="false" text="Play with number only" />
+      <RadioButton fx:id="radioButtonConsole" layoutX="43.0" layoutY="139.0" mnemonicParsing="false" text="Play with the console" />
+      <RadioButton fx:id="radioButtonPicture" layoutX="43.0" layoutY="192.0" mnemonicParsing="false" text="Play with a picture" />
+      <RadioButton fx:id="radioButtonNumber" layoutX="43.0" layoutY="165.0" mnemonicParsing="false" text="Play with number only" />
       <Label layoutX="46.0" layoutY="211.0" prefHeight="17.0" prefWidth="139.0" text="Choose a theme :">
          <font>
             <Font name="System Bold" size="16.0" />
