change of theme in the menu (does not work for the moment)

--- a/src/main/resources/dev/pa1007/dark-theme.css
+++ b/src/main/resources/dev/pa1007/dark-theme.css
@@ -1,5 +1,5 @@
 .root {
-    -fx-accent: #1e74c6;
+    -fx-accent: grey;
     -fx-focus-color: -fx-accent;
     -fx-base: #373e43;
     -fx-control-inner-background: derive(-fx-base, 35%);
