--- a/src/main/resources/dev/pa1007/home.fxml
+++ b/src/main/resources/dev/pa1007/home.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.pa1007.controller.HomeController">
    <children>
-      <Button layoutX="448.0" layoutY="346.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="138.0" text="New game" onAction="#newGameHandler"/>
+      <Button fx:id="newGame" layoutX="448.0" layoutY="346.0" mnemonicParsing="false" onAction="#newGameHandler" prefHeight="25.0" prefWidth="138.0" text="New game" />
       <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="610.0">
         <menus>
           <Menu mnemonicParsing="false" text="Game">
@@ -35,7 +35,7 @@
       </Label>
       <Separator layoutX="-5.0" layoutY="92.0" prefHeight="25.0" prefWidth="610.0" />
       <TextField fx:id="gridSize" layoutX="211.0" layoutY="67.0" prefHeight="25.0" prefWidth="28.0" />
-      <Label layoutX="248.0" layoutY="71.0" text="(Width = Height)" />
+      <Label layoutX="253.0" layoutY="71.0" text="(Width = Height, if empty, default value = 4)" />
       <Label layoutX="46.0" layoutY="114.0" text="Select an image :">
          <font>
             <Font name="System Bold" size="16.0" />
