--- a/src/main/resources/dev/pa1007/home.fxml
+++ b/src/main/resources/dev/pa1007/home.fxml
@@ -1,65 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.pa1007.controller.HomeController">
-   <children>
-      <Button fx:id="newGame" layoutX="448.0" layoutY="346.0" mnemonicParsing="false" onAction="#newGameHandler" prefHeight="25.0" prefWidth="138.0" text="New game" />
-      <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="610.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="Game">
-            <items>
-                <MenuItem mnemonicParsing="false" onAction="#loadGameHandler" text="Load game" />
-                <MenuItem mnemonicParsing="false" onAction="#quitHandler" text="Quit" />
-            </items>
-          </Menu>
-            <Menu mnemonicParsing="false" text="Leaderboard">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Show" />
-              </items>
-            </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" onAction="#aboutHandler" text="About"/>
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-      <Label layoutX="46.0" layoutY="67.0" text="Choose the grid size : ">
-         <font>
-            <Font name="System Bold" size="16.0" />
-         </font>
-      </Label>
-      <Separator layoutX="-5.0" layoutY="92.0" prefHeight="25.0" prefWidth="610.0" />
-      <TextField fx:id="gridSize" layoutX="211.0" layoutY="67.0" prefHeight="25.0" prefWidth="28.0" />
-      <Label layoutX="253.0" layoutY="71.0" text="(Width = Height, if empty, default value = 4)" />
-      <Label layoutX="46.0" layoutY="114.0" text="Select an image :">
-         <font>
-            <Font name="System Bold" size="16.0" />
-         </font>
-      </Label>
-      <Label layoutX="305.0" layoutY="118.0" text="(If empty, a default image will be assigned)" />
-      <Button fx:id="chooseImage" layoutX="187.0" layoutY="114.0" mnemonicParsing="false" onAction="#chooseImageHandler" prefHeight="25.0" prefWidth="105.0" text="Select an image" />
-      <Button fx:id="close" layoutX="46.0" layoutY="346.0" mnemonicParsing="false" onAction="#quitHandler" prefHeight="25.0" prefWidth="138.0" text="Close" />
-      <ImageView fitHeight="119.0" fitWidth="127.0" layoutX="467.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@images/taquin.png" />
-         </image>
-      </ImageView>
-      <RadioButton fx:id="radioButtonConsole" layoutX="43.0" layoutY="139.0" mnemonicParsing="false" text="Play with the console" />
-      <RadioButton fx:id="radioButtonPicture" layoutX="43.0" layoutY="192.0" mnemonicParsing="false" text="Play with a picture" />
-      <RadioButton fx:id="radioButtonNumber" layoutX="43.0" layoutY="165.0" mnemonicParsing="false" text="Play with number only" />
-      <Label layoutX="46.0" layoutY="211.0" prefHeight="17.0" prefWidth="139.0" text="Choose a theme :">
-         <font>
-            <Font name="System Bold" size="16.0" />
-         </font>
-      </Label>
-      <RadioButton fx:id="radioButtonDarkTheme" layoutX="46.0" layoutY="260.0" mnemonicParsing="false" text="Dark theme" />
-      <RadioButton fx:id="radioButtonBlueTheme" layoutX="46.0" layoutY="286.0" mnemonicParsing="false" text="Blue theme" />
-      <RadioButton fx:id="radioButtonYellowTheme" layoutX="46.0" layoutY="311.0" mnemonicParsing="false" text="Yellow theme" />
-      <RadioButton fx:id="radioButtonWhiteTheme" layoutX="46.0" layoutY="236.0" mnemonicParsing="false" text="White theme" />
-   </children>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.input.KeyCodeCombination?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
+            fx:controller="dev.pa1007.controller.HomeController">
+    <children>
+        <Button fx:id="newGame" layoutX="448.0" layoutY="346.0" mnemonicParsing="false" onAction="#newGameHandler"
+                prefHeight="25.0" prefWidth="138.0" text="New game"/>
+        <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="610.0">
+            <menus>
+                <Menu mnemonicParsing="false" text="Game">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#loadGameHandler" text="Load game">
+                            <accelerator>
+                                <KeyCodeCombination alt="UP" code="L" control="DOWN" meta="UP" shift="UP"
+                                                    shortcut="UP"/>
+                            </accelerator>
+                        </MenuItem>
+                        <MenuItem mnemonicParsing="false" onAction="#quitHandler" text="Quit"/>
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Leaderboard">
+                    <MenuItem mnemonicParsing="false" onAction="#leaderboardShowHandler" text="Show">
+                        <accelerator>
+                            <KeyCodeCombination alt="DOWN" code="L" control="UP" meta="UP" shift="UP" shortcut="UP"/>
+                        </accelerator>
+                    </MenuItem>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                    <MenuItem mnemonicParsing="false" onAction="#aboutHandler" text="About">
+                        <accelerator>
+                            <KeyCodeCombination alt="UP" code="A" control="UP" meta="UP" shift="UP" shortcut="UP"/>
+                        </accelerator>
+                    </MenuItem>
+                </Menu>
+            </menus>
+        </MenuBar>
+        <Label layoutX="46.0" layoutY="67.0" text="Choose the grid size : ">
+            <font>
+                <Font name="System Bold" size="16.0"/>
+            </font>
+        </Label>
+        <Separator layoutX="-5.0" layoutY="92.0" prefHeight="25.0" prefWidth="610.0"/>
+        <TextField fx:id="gridSize" layoutX="211.0" layoutY="67.0" prefHeight="25.0" prefWidth="28.0"/>
+        <Label layoutX="253.0" layoutY="71.0" text="(Width = Height, if empty, default value = 4)"/>
+        <Label layoutX="46.0" layoutY="114.0" text="Select an image :">
+            <font>
+                <Font name="System Bold" size="16.0"/>
+            </font>
+        </Label>
+        <Label layoutX="305.0" layoutY="118.0" text="(If empty, a default image will be assigned)"/>
+        <Button fx:id="chooseImage" layoutX="187.0" layoutY="114.0" mnemonicParsing="false"
+                onAction="#chooseImageHandler" prefHeight="25.0" prefWidth="105.0" text="Select an image"/>
+        <Button fx:id="close" layoutX="46.0" layoutY="346.0" mnemonicParsing="false" onAction="#quitHandler"
+                prefHeight="25.0" prefWidth="138.0" text="Close"/>
+        <ImageView fitHeight="119.0" fitWidth="127.0" layoutX="467.0" layoutY="200.0" pickOnBounds="true"
+                   preserveRatio="true">
+            <image>
+                <Image url="@images/taquin.png"/>
+            </image>
+        </ImageView>
+        <RadioButton fx:id="radioButtonConsole" layoutX="43.0" layoutY="139.0" mnemonicParsing="false"
+                     text="Play with the console"/>
+        <RadioButton fx:id="radioButtonPicture" layoutX="43.0" layoutY="192.0" mnemonicParsing="false"
+                     text="Play with a picture"/>
+        <RadioButton fx:id="radioButtonNumber" layoutX="43.0" layoutY="165.0" mnemonicParsing="false"
+                     text="Play with number only"/>
+        <Label layoutX="46.0" layoutY="211.0" prefHeight="17.0" prefWidth="139.0" text="Choose a theme :">
+            <font>
+                <Font name="System Bold" size="16.0"/>
+            </font>
+        </Label>
+        <RadioButton fx:id="radioButtonDarkTheme" layoutX="46.0" layoutY="260.0" mnemonicParsing="false"
+                     text="Dark theme"/>
+        <RadioButton fx:id="radioButtonBlueTheme" layoutX="46.0" layoutY="286.0" mnemonicParsing="false"
+                     text="Blue theme"/>
+        <RadioButton fx:id="radioButtonYellowTheme" layoutX="46.0" layoutY="311.0" mnemonicParsing="false"
+                     text="Yellow theme"/>
+        <RadioButton fx:id="radioButtonWhiteTheme" layoutX="46.0" layoutY="236.0" mnemonicParsing="false"
+                     text="White theme"/>
+    </children>
 </AnchorPane>
